fix: use flex layout for title row to display full group tag without truncation

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -427,9 +427,7 @@ img {
 	width: 1.3em;
 	height: 1.3em;
 	margin-right: 0.35em;
-	vertical-align: middle;
-	position: relative;
-	top: -0.05em;
+	flex-shrink: 0;
 }
 
 .results-list-item .title-badge .icon {
@@ -437,7 +435,15 @@ img {
 	height: 100%;
 }
 
-.results-list-item div.title, .results-list-item div.url {
+.results-list-item div.title {
+	width: 100%;
+	height: 19px;
+	display: flex;
+	align-items: center;
+	overflow: hidden;
+}
+
+.results-list-item div.url {
 	width: 100%;
 	height: 19px;
 	text-overflow: ellipsis;
@@ -497,14 +503,11 @@ img {
     color: var(--color, #5f6368);
     min-width: 1.5em;
     line-height: 1.5em;
-    top: -0.05em;
     background: var(--background, #e8eaed);
     border-radius: 4px;
     padding: 0 0.4em;
     margin: 0 .5em 0 0;
-    display: inline-block;
-    position: relative;
-    vertical-align: middle;
+    flex-shrink: 0;
 }
 
 .mac .results-list-item div.title-index {
@@ -522,22 +525,24 @@ img {
 	text-align: center;
 	min-width: 1.5em;
 	line-height: 1.5em;
-	top: -0.05em;
 	border-radius: 4px;
 	padding: 0 0.4em;
 	margin: 0 .5em 0 0;
-	display: inline-block;
-	position: relative;
-	vertical-align: middle;
 	color: #fff;
-	max-width: 8em;
-	overflow: hidden;
-	text-overflow: ellipsis;
 	white-space: nowrap;
+	flex-shrink: 0;
 }
 
 .mac .results-list-item .group-tag {
 	line-height: 1.55em;
+}
+
+.results-list-item .title-text {
+	flex: 1;
+	min-width: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 /* Chrome tab group predefined colors */
